hphp/test/slow/func-ptr-no-interop/func-stringish.php.expectf
string(5) "hello"

Catchable fatal error: Argument 1 passed to foo() must implement interface Stringish, func given in %s/func-ptr-no-interop/func-stringish.php on line 10
